# voxel-cataclysm

./: Cargo.toml  README.md  drawfile.drawio
.github/workflows/: rust.yml
client/: Cargo.toml
client/assets/models/item/: Portal.gltf  arrowx10.gltf  arrowx100.gltf  arrowx10North.gltf
client/assets/models/mob/: slime.gltf
client/assets/models/player/: mereo.gltf
client/src/: main.rs
client/src/debug/: debug_ui.rs
client/src/voxel/: mod.rs
client/src/voxel/actor/: mod.rs
client/src/voxel/actor/animation/: play.rs
client/src/voxel/actor/boss/: mod.rs
client/src/voxel/actor/mob/: mod.rs
client/src/voxel/actor/mob/brain/: actions.rs  components.rs  thinkers.rs
client/src/voxel/actor/player/: bundle.rs  controller.rs  mod.rs  player_controller.rs
client/src/voxel/animation/: animation_play.rs  link.rs  mod.rs  play.rs
client/src/voxel/combat/: events.rs  mod.rs
client/src/voxel/end_portal/: end_portal.rs  mod.rs
client/src/voxel/events/: end.rs  mod.rs  spawn.rs
client/src/voxel/input/: mod.rs
client/src/voxel/loading/: mod.rs
client/src/voxel/mob/: mod.rs
client/src/voxel/mob/brain/: actions.rs  components.rs  mod.rs  scorers.rs  thinkers.rs
client/src/voxel/networking/: mod.rs  sync.rs  update.rs
client/src/voxel/player/: mod.rs
client/src/voxel/terraingen/: common.rs
client/src/voxel/ui/: build.rs  crosshair.rs  healthbar.rs  mod.rs  spawn.rs  styles.rs  time.rs  update.rs
client/src/voxel/ui/chat/: mod.rs  ui.rs  updates.rs
client/src/voxel/ui/dead/: dead.rs  mod.rs  updates.rs
client/src/voxel/ui/end/: end.rs  mod.rs  styles.rs  updates.rs
client/src/voxel/world/: chunks.rs  meshing.rs  mod.rs  sky.rs  terrain.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
src/voxel/: mod.rs
src/voxel/animation/: animation_link.rs  animation_play.rs  animations.rs  mod.rs
src/voxel/loading/: animation_link.rs  animation_load.rs  loading_screen.rs  mod.rs
src/voxel/player/: mod.rs  player_anim.rs  player_anim.rs.ignore  player_controller.rs  player_mov.rs
src/voxel/world/: chunks.rs  chunks_anim.rs  meshing.rs  mod.rs  sky.rs  terrain.rs
