[workspace]
members = ["client", "server", "common"]
resolver = "2"

[workspace.dependencies]
bevy = "0.10.1"
bevy_renet = { git = "https://github.com/lucaspoffo/renet/" }
bevy_rapier3d = { version = "0.21.0" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"

[patch.crates-io]
ilattice = { git = "https://github.com/Game4all/ilattice-rs", branch = "update-glam" }
