
[package]
name = "client"
version = "0.2.0"
authors = ["Lucas A. <game4allyt@gmail.com>"]
edition = "2021"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_renet.workspace = true
bevy_rapier3d.workspace = true
bincode.workspace = true
ndshape = "0.3.0"
block-mesh = "0.2.0"
ndcopy = "0.3.0"
thread_local = "1.1.7"
bevy_egui = "0.20"
float-ord = "0.3.2"
futures-lite = "1.12.0"
once_cell = "1.17.1"
bevy_atmosphere = "0.6"
bitflags = "2.0.2"
ilattice = { version = "0.1.0", features = ["glam", "morton-encoding"] }
noise = "0.8.2"
itertools = "0.10.5"
bevy_asset_loader = "0.16.0"
big-brain = "0.17.0"

common = { path = "../common" }
