
[package]
name = "client"
version = "0.2.0"
authors = ["Lucas A. <game4allyt@gmail.com>"]
edition = "2021"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_renet.workspace = true
bincode.workspace = true
ndshape.workspace = true
block-mesh.workspace = true
ndcopy.workspace = true
thread_local.workspace = true
bevy_egui.workspace = true
float-ord.workspace = true
futures-lite.workspace = true
once_cell.workspace = true
bevy_atmosphere.workspace = true
bitflags.workspace = true
ilattice.workspace = true
noise.workspace = true
itertools.workspace = true
bevy_asset_loader.workspace = true
bevy_rapier3d.workspace = true
big-brain.workspace = true
common = { path = "../common" }
rand="0.8.5"