[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_renet.workspace = true
bevy_rapier3d.workspace = true
serde.workspace = true
bincode.workspace = true
fastrand.workspace = true
common = { path = "../common" }
